--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "@heroicons/react": "^2.0.18" 
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
